--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -85,6 +85,12 @@
         color: white;
         text-decoration: none;
     }
+    .filter{
+        background-color: black;
+        color: white;
+        position: absolute;
+        top: 20rem;
+    }
     @media screen and (max-width:1368px){
         
         .logoflip{
