--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -86,10 +86,16 @@
         text-decoration: none;
     }
     .filter{
-        background-color: black;
-        color: white;
+        background-color: white;
+        color: black;
         position: absolute;
-        top: 20rem;
+        top: 86.5%;
+        border: 2px solid rgb(255, 255, 255);
+        width: 29.5rem;
+        height: 26rem;
+        left: 23.2%;
+        padding-left: 2rem;
+        cursor: pointer;
     }
     @media screen and (max-width:1368px){
         
